# ttrpg-dice-claude-skill

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  update-branches.sh
.github/workflows/: release.yml  test.yml
plans/: TESTING_AND_DEPLOY_PLAN.md
src/: SKILL.md
src/scripts/: dice_roller.py
tests/: __init__.py  conftest.py  test_complex.py  test_errors.py  test_evaluator.py  test_fate.py  test_modifiers.py  test_parser.py  test_statistical.py  test_success_counting.py
